# opentrons

./: .eslintrc.js  .travis.yml  Makefile  babel.config.js  jest.config.js  package.json
api/: setup.py
api/opentrons/tools/: pcb_fixture_5001.py
api/src/opentrons/: main.py
api/src/opentrons/api/: session.py
api/src/opentrons/config/: pipette_config.py  robot_configs.py
api/src/opentrons/data_storage/: database.py  old_container_loading.py
api/src/opentrons/drivers/: aspirate.html  aspirate_v1.txt  aspirate_v2.txt  log_parser.py  serial_communication.py
api/src/opentrons/hardware_control/: __init__.py  api.py  controller.py  simulator.py  util.py
api/src/opentrons/legacy_api/: api.py
app/: index.d.ts
app-shell/: Makefile  package.json
app-shell/src/: config.ts  discovery.ts  http.ts  log.ts  main.ts  menu.ts  preload.ts  robot-logs.ts  types.ts  ui.ts  update.ts
app-shell/src/buildroot/: index.ts  release-files.ts  release-manifest.ts  types.ts  update.ts
app-shell/typings/: globals.d.ts  merge-options.d.ts  node-stream-zip.d.ts
app/src/calibration/: api-types.js
app/src/sessions/: types.js
compute/scripts/: setup_gpio.py  start.sh
discovery-client/: index.d.ts
notify-server/: Makefile  pyproject.toml
robot-server/robot_server/service/: app.py  dependencies.py
robot-server/tests/service/: test_errors.py
shared-data/definitions2/: opentrons_96x300_ul_96x300_ul_96x300_ul_96x300_ul_tiprack.json
shared-data/robot-data/: pipetteModelSpecs.json  pipetteNameSpecs.json
webpack-config/lib/: rules.js
(+68 files in other folders)
